# etherpad-plugin-data-extractor

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
db/: .gitignore
migrations/2023-09-05-185805_init/: down.sql  up.sql
src/: constants.rs  db.rs  download_service.rs  main.rs  package_controller.rs  schema.rs
src/api/: download_stat.rs  mod.rs  replicate_response.rs
src/entities/: data.rs  ep_changes.rs  keyword.rs  mod.rs  official_repository.rs  plugin.rs  plugin_shorts.rs  sequence.rs  timestamp_sync.rs  version.rs
