[package]
name = "etherpad-plugin-data-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk= "0.4.0"
serde = {version="1.0.190", features = ["derive"]}
reqwest = {version="0.11.22", features = ["blocking", "json", "async-compression", "rustls"]}
chrono = { version = "0.4", default-features = false, features = ["serde"] }
libsqlite3-sys = {version = "0.26.0", features = ["bundled"], optional = true}
diesel_migrations = {version="2.0.0",features = ["postgres"]}
actix-web = {version="4.3.0", features=["rustls"]}
diesel = { version = "2.1.3", features = ["chrono", "r2d2","postgres"] }
serde_json = {version="1.0.107"}
uuid = {version= "1.4.1", features=["serde", "v4"]}
regex = "1.10.1"